Getting ready for better data preparation.

--- a/notebooks/Data exploration.ipynb
+++ b/notebooks/Data exploration.ipynb
@@ -9,9 +9,15 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
+    "from IPython.display import Audio\n",
     "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "\n",
     "import torch\n",
-    "from scipy.stats import norm"
+    "import torch.nn as nn\n",
+    "import torchaudio.functional as AF\n",
+    "\n",
+    "from einops import rearrange"
    ]
   },
   {
@@ -21,7 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.datamodules.components.audio_dataset import AudioDataset"
+    "from src.datamodules.components.ddsp_dataset import DDSPDataset\n",
+    "from src.utils.crepe_loss import CrepeLoss"
    ]
   },
   {
@@ -31,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = AudioDataset('../data/preprocessed/cello/features.pth')"
+    "dataset = DDSPDataset('../data/cello.pth')"
    ]
   },
   {
@@ -87,13 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "pip3 install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cu102\n",
-    "\n",
     "n, bins, patches = plt.hist(norm.cdf((loudness - mean) / std), 128)\n",
     "plt.title(\"Loudness Histogram\")\n",
-    "plt.xlabel(\"Db\")\n",
+    "plt.xlabel(\"Normalized Db\")\n",
     "plt.ylabel(\"Frequency\")"
    ]
   },
@@ -163,7 +166,7 @@
     "\n",
     "n, bins, patches = plt.hist(f0, 360)\n",
     "plt.title(\"F0 Histogram\")\n",
-    "plt.xlabel(\"Db\")\n",
+    "plt.xlabel(\"Normalized pitch\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "\n",
     "l_min = f0.min()\n",
@@ -191,253 +194,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38b25735",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
-    "from torch.nn import TransformerEncoder, TransformerEncoderLayer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80886042",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4906f07d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PositionalEncoding(nn.Module):\n",
-    "    r\"\"\"Inject some information about the relative or absolute position of the tokens in the sequence.\n",
-    "        The positional encodings have the same dimension as the embeddings, so that the two can be summed.\n",
-    "        Here, we use sine and cosine functions of different frequencies.\n",
-    "    .. math:\n",
-    "        \\text{PosEncoder}(pos, 2i) = sin(pos/10000^(2i/d_model))\n",
-    "        \\text{PosEncoder}(pos, 2i+1) = cos(pos/10000^(2i/d_model))\n",
-    "        \\text{where pos is the word position and i is the embed idx)\n",
-    "    Args:\n",
-    "        d_model: the embed dim (required).\n",
-    "        dropout: the dropout value (default=0.1).\n",
-    "        max_len: the max. length of the incoming sequence (default=5000).\n",
-    "    Examples:\n",
-    "        >>> pos_encoder = PositionalEncoding(d_model)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, d_model, dropout=0.1, max_len=251):\n",
-    "        super(PositionalEncoding, self).__init__()\n",
-    "        self.dropout = nn.Dropout(p=dropout)\n",
-    "\n",
-    "        pe = torch.zeros(max_len, d_model)\n",
-    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
-    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
-    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
-    "        pe = pe.unsqueeze(0).transpose(0, 1)\n",
-    "        self.register_buffer('pe', pe)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        r\"\"\"Inputs of forward function\n",
-    "        Args:\n",
-    "            x: the sequence fed to the positional encoder model (required).\n",
-    "        Shape:\n",
-    "            x: [sequence length, batch size, embed dim]\n",
-    "            output: [sequence length, batch size, embed dim]\n",
-    "        Examples:\n",
-    "            >>> output = pos_encoder(x)\n",
-    "        \"\"\"\n",
-    "\n",
-    "        x = x + self.pe[:x.size(0), :]\n",
-    "        return self.dropout(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41d3a628",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TransformerModel(nn.Module):\n",
-    "    \"\"\"Container module with an encoder, a recurrent or transformer module, and a decoder.\"\"\"\n",
-    "\n",
-    "    def __init__(self, ninp=512, nhead=2, nhid=200, nlayers=2, dropout=0.1):\n",
-    "        super(TransformerModel, self).__init__()\n",
-    "        self.model_type = 'Transformer'\n",
-    "        self.src_mask = None\n",
-    "        self.pos_encoder = PositionalEncoding(ninp, dropout)\n",
-    "        encoder_layers = TransformerEncoderLayer(ninp, nhead, nhid, dropout)\n",
-    "        self.transformer_encoder = TransformerEncoder(encoder_layers, nlayers)\n",
-    "        self.ninp = ninp\n",
-    "\n",
-    "    def _generate_square_subsequent_mask(self, sz):\n",
-    "        mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
-    "        mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
-    "        return mask\n",
-    "\n",
-    "    def forward(self, src, has_mask=True):\n",
-    "        if has_mask:\n",
-    "            device = src.device\n",
-    "            if self.src_mask is None or self.src_mask.size(0) != len(src):\n",
-    "                mask = self._generate_square_subsequent_mask(len(src)).to(device)\n",
-    "                self.src_mask = mask\n",
-    "        else:\n",
-    "            self.src_mask = None\n",
-    "\n",
-    "        src = self.pos_encoder(src)\n",
-    "        output = self.transformer_encoder(src, self.src_mask)\n",
-    "        return output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d5b69e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shit = TransformerModel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b989dfb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bok = torch.randn(5, 10, 512)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e4e7d16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    out = shit(bok)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73aca197",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24d18fc9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torchaudio.functional as AF\n",
-    "from einops import rearrange"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74f18f3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils.crepe_loss import CrepeLoss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8752a23d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch import Tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38698565",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loudness(waveform: Tensor, sample_rate: int):\n",
-    "    if waveform.size(-2) > 5:\n",
-    "        raise ValueError(\"Only up to 5 channels are supported.\")\n",
-    "\n",
-    "    gate_duration = 0.4\n",
-    "    overlap = 0.75\n",
-    "    gamma_abs = -70.0\n",
-    "    kweight_bias = -0.691\n",
-    "    gate_samples = int(round(gate_duration * sample_rate))\n",
-    "    step = int(round(gate_samples * (1 - overlap)))\n",
-    "\n",
-    "    # Apply K-weighting\n",
-    "    waveform = treble_biquad(waveform, sample_rate, 4.0, 1500.0, 1 / math.sqrt(2))\n",
-    "    waveform = highpass_biquad(waveform, sample_rate, 38.0, 0.5)\n",
-    "\n",
-    "    # Compute the energy for each block\n",
-    "    energy = torch.square(waveform).unfold(-1, gate_samples, step)\n",
-    "    energy = torch.mean(energy, dim=-1)\n",
-    "\n",
-    "    # Compute channel-weighted summation\n",
-    "    g = torch.tensor([1.0, 1.0, 1.0, 1.41, 1.41], dtype=waveform.dtype, device=waveform.device)\n",
-    "    g = g[: energy.size(-2)]\n",
-    "\n",
-    "    energy_weighted = torch.sum(g.unsqueeze(-1) * energy, dim=-2)\n",
-    "    loudness = -0.691 + 10 * torch.log10(energy_weighted)\n",
-    "\n",
-    "    # Apply absolute gating of the blocks\n",
-    "    gated_blocks = loudness > gamma_abs\n",
-    "    gated_blocks = gated_blocks.unsqueeze(-2)\n",
-    "\n",
-    "    energy_filtered = torch.sum(gated_blocks * energy, dim=-1) / torch.count_nonzero(gated_blocks, dim=-1)\n",
-    "    energy_weighted = torch.sum(g * energy_filtered, dim=-1)\n",
-    "    gamma_rel = kweight_bias + 10 * torch.log10(energy_weighted) - 10\n",
-    "\n",
-    "    # Apply relative gating of the blocks\n",
-    "    gated_blocks = torch.logical_and(gated_blocks.squeeze(-2), loudness > gamma_rel.unsqueeze(-1))\n",
-    "    gated_blocks = gated_blocks.unsqueeze(-2)\n",
-    "\n",
-    "    energy_filtered = torch.sum(gated_blocks * energy, dim=-1) / torch.count_nonzero(gated_blocks, dim=-1)\n",
-    "    energy_weighted = torch.sum(g * energy_filtered, dim=-1)\n",
-    "    LKFS = kweight_bias + 10 * torch.log10(energy_weighted)\n",
-    "    return LKFS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a1968c62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, amp, audio = dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "920967f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio.shape"
+    "f, amp, audio = dataset[2]"
    ]
   },
   {
@@ -458,12 +219,15 @@
    "outputs": [],
    "source": [
     "def get_amp(example):\n",
+    "    b, c, _ = example.shape\n",
     "    example = rearrange(example, \"b c t -> (b c) t\")\n",
     "    example = torch.nn.functional.pad(example, (19200 // 2, 19200 // 2))\n",
     "    example = example.unfold(1, 19200, 3 * 256)\n",
-    "    example = rearrange(example, \"b c t -> (b c) t\").unsqueeze(1)\n",
+    "    _, f, _ = example.shape\n",
+    "    example = rearrange(example, \"(b c) f t -> (b f) c t\", b=b, c=c, f=f)\n",
     "\n",
     "    amp = AF.loudness(example, 48000)\n",
+    "    amp = rearrange(amp, \"(b f) -> b f\", b=b, f=f)\n",
     "\n",
     "    return amp"
    ]
@@ -481,102 +245,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9e925c3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio.shape, shit.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "140d2f6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(shit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e0bdff8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio = AF.resample(audio, 48000, 16000).unsqueeze(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f05e8ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio = rearrange(audio, \"b c t -> (b c) t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28a20046",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio = torch.nn.functional.pad(audio, (19200 // 2, 19200 // 2)).unfold(1, 19200, 3 * 256)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bb373cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio = rearrange(audio, \"bc f t -> (bc f) t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16de423a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.shape, amp.shape, audio.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "663c2271",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crap = CrepeLoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cb79600",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crap.crepe.cuda()\n",
-    "pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d76ac436",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio = audio.unsqueeze(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f992a8c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shit = crap.loss(audio.cuda(), audio.cuda())"
+    "plt.rcParams['figure.figsize'] = [8, 4]\n",
+    "plt.plot(torch.nan_to_num(shit[0], nan=-70))\n",
+    "plt.show()\n",
+    "plt.plot(f[0])\n",
+    "plt.show()\n",
+    "Audio(data=audio[0], rate=48000)"
    ]
   },
   {
@@ -586,13 +274,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shit"
+    "audios = torch.stack([f['audio'] for f in dataset.features])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a60cf5",
+   "id": "40a9ef80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audios.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b91d3f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amps = []\n",
+    "for i in range(0, 6075, 25):\n",
+    "    print(i)\n",
+    "    amps.append(get_amp(audios[i:i+25].cuda()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747114e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amps[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fabe9fa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shit = torch.cat([a.cpu() for a in amps], dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69bfa939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.nan_to_num_(shit, nan=100.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33738785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shit[shit==100.] = -70."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "322a35d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shit.min(), shit.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d78bc685",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 8\n",
+    "plt.rcParams['figure.figsize'] = [8, 4]\n",
+    "plt.plot((shit[idx] + 70) / 70)\n",
+    "plt.show()\n",
+    "plt.plot(dataset.features[idx]['f0'][0])\n",
+    "plt.show()\n",
+    "Audio(data=audios[idx, 0], rate=48000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1697b1e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dynamic_range = 70  # dB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7976912d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_rate = 250\n",
+    "hop_size = 48000 // frame_rate\n",
+    "hop_size, 48000 * 5 // hop_size  # 5 seconds in samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2463e40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_harmonics = 60 * 3\n",
+    "n_noise = 65 * 3\n",
+    "n_harmonics, n_noise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a568c516",
+   "metadata": {},
+   "source": [
+    "- normalize f0:\n",
+    "  - `f0 = cents_to_bins(freqs_to_cents(f0)) / 359`\n",
+    "- un-normalize f0:\n",
+    "  - `f0 = cents_to_freqs(bins_to_cents(f0 * 359))`\n",
+    "- normalize dB:\n",
+    "  - `db = (db + 70) / 70`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bc57d25",
    "metadata": {},
    "outputs": [],
    "source": []
