Initial working code

--- a/notebooks/Data exploration.ipynb
+++ b/notebooks/Data exploration.ipynb
@@ -12,12 +12,15 @@
     "from IPython.display import Audio\n",
     "import numpy as np\n",
     "from scipy.stats import norm\n",
+    "import librosa\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchaudio.functional as AF\n",
+    "import torchcrepe\n",
     "\n",
-    "from einops import rearrange"
+    "from einops import rearrange\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -28,7 +31,24 @@
    "outputs": [],
    "source": [
     "from src.datamodules.components.ddsp_dataset import DDSPDataset\n",
-    "from src.utils.crepe_loss import CrepeLoss"
+    "from src.utils.constants import *\n",
+    "from src.utils.helpers import freqs_to_cents, cents_to_bins\n",
+    "from src.utils.features import Loudness, get_f0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c14bcba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav_path = '/home/kureta/Music/Cello Samples/ArpAm-00000-.wav'\n",
+    "y1, _ = librosa.load(wav_path, sr=48000, mono=False, dtype='float32')\n",
+    "y2, _ = librosa.load(wav_path, sr=44100, mono=False, dtype='float32')\n",
+    "y2 = AF.resample(torch.from_numpy(y2), 44100, 48000)\n",
+    "\n",
+    "y1.shape, y2.shape"
    ]
   },
   {
@@ -54,6 +74,130 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d345bdc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loudness.min(), loudness.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b84e28b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc = Loudness().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5222410e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audios = torch.stack([l['audio'] for l in dataset.features]).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75f45dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audios.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815bf43c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f0s = []\n",
+    "for wav in audios:\n",
+    "    f0s.append(get_f0(wav.unsqueeze(0).cuda()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e87097ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs = torch.cat(f0s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c13ffde1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(freqs[0, 0].cpu().numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82ecc48c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amps = []\n",
+    "for i in range(0, 6075, 25):\n",
+    "    amps.append(calc.get_amp(audios[i:i+25].cuda()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a9d6bbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loudness = torch.cat(amps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bcc6143",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loudness = loudness.cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff1af5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loudness.max() - loudness.min(), loudness.min(), loudness.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "096672dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loudness = loudness.cpu().numpy().flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "699f85cc",
    "metadata": {},
    "outputs": [],
@@ -72,7 +216,7 @@
     "start = mean - std\n",
     "end = mean + std\n",
     "\n",
-    "plt.xticks([-70.0, -65.0, -60.0, -30.0, mean, l_min, l_max, start, end, start-std, end+std])\n",
+    "plt.xticks([mean, l_min, l_max, start, end, start-std, end+std])\n",
     "plt.grid(axis='x')\n",
     "\n",
     "plt.axvline(x=l_min, linewidth=2, label=f'min={l_min:.2f}', color='k')\n",
@@ -194,11 +338,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a18e9383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_amp(example):\n",
+    "    b, c, _ = example.shape\n",
+    "    example = rearrange(example, \"b c t -> (b c) t\")\n",
+    "    example = torch.nn.functional.pad(example, (19200 // 2, 19200 // 2))\n",
+    "    example = example.unfold(1, 19200, HOP_LENGTH)\n",
+    "    _, f, _ = example.shape\n",
+    "    example = rearrange(example, \"(b c) f t -> (b f) c t\", b=b, c=c, f=f)\n",
+    "\n",
+    "    amp = AF.loudness(example, SAMPLE_RATE)\n",
+    "    amp = rearrange(amp, \"(b f) -> b f\", b=b, f=f).unsqueeze(1)\n",
+    "\n",
+    "    return amp\n",
+    "\n",
+    "\n",
+    "def get_pitch(x, device='cuda'):\n",
+    "    # to mono\n",
+    "    x = AF.resample(x.mean(1), SAMPLE_RATE, CREPE_SAMPLE_RATE)\n",
+    "    f0 = torchcrepe.predict(x,\n",
+    "                            sample_rate=CREPE_SAMPLE_RATE,\n",
+    "                            hop_length=CREPE_HOP_LENGTH,\n",
+    "                            fmin=31.7,\n",
+    "                            decoder=torchcrepe.decode.weighted_argmax,\n",
+    "                            device=device, return_periodicity=False).unsqueeze(1)\n",
+    "\n",
+    "    return f0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a1968c62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, amp, audio = dataset[2]"
+    "f, amp, audio = dataset[0]"
    ]
   },
   {
@@ -214,27 +392,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc58602",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_amp(example):\n",
-    "    b, c, _ = example.shape\n",
-    "    example = rearrange(example, \"b c t -> (b c) t\")\n",
-    "    example = torch.nn.functional.pad(example, (19200 // 2, 19200 // 2))\n",
-    "    example = example.unfold(1, 19200, 3 * 256)\n",
-    "    _, f, _ = example.shape\n",
-    "    example = rearrange(example, \"(b c) f t -> (b f) c t\", b=b, c=c, f=f)\n",
-    "\n",
-    "    amp = AF.loudness(example, 48000)\n",
-    "    amp = rearrange(amp, \"(b f) -> b f\", b=b, f=f)\n",
-    "\n",
-    "    return amp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b2641fd3",
    "metadata": {},
    "outputs": [],
@@ -245,11 +402,136 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a31b9722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bok = get_pitch(audio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9e925c3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio.shape, shit.shape"
+    "bok.shape, shit.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eb6c517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = librosa.stft(audio[0].mean(0).numpy(), n_fft=N_FFT, hop_length=HOP_LENGTH, pad_mode='reflect').T\n",
+    "print(s.shape)\n",
+    "# Compute power.\n",
+    "amplitude = np.abs(s)\n",
+    "power = amplitude**2\n",
+    "\n",
+    "frequencies = librosa.fft_frequencies(sr=SAMPLE_RATE, n_fft=N_FFT)\n",
+    "a_weighting = librosa.A_weighting(frequencies)[None, :]\n",
+    "weighting = 10**(a_weighting/10)\n",
+    "power = power * weighting\n",
+    "\n",
+    "power = np.mean(power, axis=-1)\n",
+    "# loudness = np.log(power*100 + 1)\n",
+    "loudness = librosa.power_to_db(power)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6111bf22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = torch.stack([dataset[0][2], dataset[1][2], dataset[2][2], dataset[3][2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "761a6474",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = torch.stft(batch.mean(1), n_fft=N_FFT, hop_length=HOP_LENGTH, window=torch.hann_window(N_FFT), return_complex=True, pad_mode='reflect')\n",
+    "s = s.transpose(1, 2)\n",
+    "\n",
+    "# Compute power.\n",
+    "amplitude = torch.abs(s)\n",
+    "power = amplitude**2\n",
+    "\n",
+    "frequencies = torch.from_numpy(librosa.fft_frequencies(sr=SAMPLE_RATE, n_fft=N_FFT).astype('float32'))\n",
+    "a_weighting = torch.from_numpy(librosa.A_weighting(frequencies)[None, None, :].astype('float32'))\n",
+    "weighting = 10**(a_weighting/10)\n",
+    "power = power * weighting\n",
+    "\n",
+    "power = torch.mean(power, axis=-1)\n",
+    "torchness = 10.0 * np.log10(np.maximum(1e-10, power))\n",
+    "torchness = np.maximum(torchness, torchness.max() - 80.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae215273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d3289e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loudness.shape, loudness.min(), loudness.max(), torchness.shape, torchness.min(), torchness.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "320cf987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torchness.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35d3fbeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(x):\n",
+    "    return (x - x.min()) / (x.max() - x.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415e6d9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams['figure.figsize'] = [8, 4]\n",
+    "plt.plot((torch.nan_to_num(shit[0, 0], nan=-70)))\n",
+    "plt.plot((loudness))\n",
+    "plt.plot((torchness[0]))\n",
+    "plt.show()\n",
+    "plt.plot(bok[0, 0])\n",
+    "plt.show()\n",
+    "Audio(data=audio[0], rate=48000)"
    ]
   },
   {
@@ -416,7 +698,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc57d25",
+   "id": "8b946eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = AF.resample(dataset.features[0]['audio'].unsqueeze(0).mean(1), SAMPLE_RATE, CREPE_SAMPLE_RATE)\n",
+    "f0 = torchcrepe.predict(x,\n",
+    "                        sample_rate=16000,\n",
+    "                        hop_length=CREPE_HOP_LENGTH,\n",
+    "                        fmin=31.7,\n",
+    "                        decoder=torchcrepe.decode.weighted_argmax,\n",
+    "                        device='cuda', return_periodicity=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2391702",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f0.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1e695d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams['figure.figsize'] = [12, 3]\n",
+    "plt.plot(cents_to_bins(freqs_to_cents(f0[0]).cpu().numpy()))\n",
+    "plt.show()\n",
+    "# plt.matshow(prod[0].cpu().numpy(), origin='lower')\n",
+    "# plt.show()\n",
+    "Audio(data=dataset.features[0]['audio'].numpy(), rate=48000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa578c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt = np.random.rand(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b4e5b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log((tt+1).mean()), np.log(tt + 1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eabe41ef",
    "metadata": {},
    "outputs": [],
    "source": []
