Testing Harmonic Oscillatore alone.

--- a/notebooks/Data exploration.ipynb
+++ b/notebooks/Data exploration.ipynb
@@ -58,7 +58,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = DDSPDataset('../data/cello.pth')"
+    "dataset = DDSPDataset('../data/cello_samples.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c366e172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(dataset[0][0][0].numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5681cd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(data=dataset[0][2][0], rate=48000)"
    ]
   },
   {
