Replaced GRU with Transformer

--- a/notebooks/Data exploration.ipynb
+++ b/notebooks/Data exploration.ipynb
@@ -39,6 +39,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "273c027d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.components.harmonic_oscillator import HarmonicOscillator\n",
+    "from src.models.components.controller import Controller, TransformerController"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eeab38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shit = HarmonicOscillator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e23e6432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bok = Controller(64, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "924f1aca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaka = TransformerController(n_harmonics=64, n_noise_filters=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d6e9369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f0 = torch.ones(1, 1, 250) * 440\n",
+    "f0 += torch.randn_like(f0) * 10.\n",
+    "loudness = torch.ones(1, 1, 250) * -40\n",
+    "loudness += torch.randn_like(loudness) * 12.\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    (_, master, harms), _ = kaka(f0, loudness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73396e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(master[0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b47100d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modified_sigmoid(x):\n",
+    "    return 2 * torch.sigmoid(x) ** 2.3 + 1e-7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1908b4e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(modified_sigmoid(torch.linspace(-1, 1, 512)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c14bcba4",
    "metadata": {},
    "outputs": [],
