This is the gru swept-cloud-1 commit

--- a/notebooks/Data exploration.ipynb
+++ b/notebooks/Data exploration.ipynb
@@ -20,7 +20,8 @@
     "import torchcrepe\n",
     "\n",
     "from einops import rearrange\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import math"
    ]
   },
   {
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "273c027d",
+   "id": "cc8d02f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eeab38b",
+   "id": "fd7cc331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e23e6432",
+   "id": "0a2abcfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "924f1aca",
+   "id": "7e7ef63c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6e9369",
+   "id": "fe462a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73396e7f",
+   "id": "520245f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b47100d",
+   "id": "91fd844e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1908b4e3",
+   "id": "383991e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +147,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = DDSPDataset('../data/cello.pth')"
+    "dataset = DDSPDataset('../data/cello_samples.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b722df19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.f0.shape, dataset.loudness.shape, dataset.audio.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508b98c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.audio.unfold(1, 48000*4, 48000*1).transpose(0, 1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7ff551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f0, amp, audio = dataset[13]\n",
+    "plt.plot(f0[0])\n",
+    "plt.show()\n",
+    "plt.plot(amp[0])\n",
+    "plt.show()\n",
+    "Audio(data=audio, rate=48000)"
    ]
   },
   {
